fixed filters opening by default on small screens

--- a/hypha/static_src/src/sass/apply/components/_filters.scss
+++ b/hypha/static_src/src/sass/apply/components/_filters.scss
@@ -61,3 +61,20 @@
         background: transparent;
     }
 }
+
+#show-filters-button {
+    display: block;
+    height: 40px;
+    @include media-query(tablet-landscape) {
+        display: none;
+    }
+    @include media-query(small-tablet) {
+        margin-left: 10px;
+    }
+}
+
+.actions-bar__inner.actions-bar__inner--right {
+    @include media-query(small-tablet) {
+        display: flex;
+    }
+}
